<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:background="@drawable/shape_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
            android:background="@color/background_expandable"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        <TextView
                android:id="@+id/title_expandale"
                android:layout_centerInParent="true"
                android:text="@string/registerChild_information_child"
                style="@style/tv_register_child"/>
        <FrameLayout
                android:layout_marginRight="@dimen/common_8dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/img_down"
                    android:src="@drawable/ic_down"
                    style="@style/img_expandable"/>
            <ImageView
                    android:id="@+id/img_up"
                    android:visibility="gone"
                    android:src="@drawable/ic_up"
                    style="@style/img_expandable"/>
        </FrameLayout>

    </RelativeLayout>
    <ScrollView
            android:id="@+id/itemChild"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:padding="@dimen/common_4dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/registerChild_nameOfChild"
                    style="@style/tv_login"/>
            <EditText
                    android:id="@+id/edUserNameChild"
                    android:inputType="text"
                    android:hint="@string/user_name_register_hint"

                    style="@style/edt_login"/>
            <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tvNullTextChild"
                        android:visibility="gone"
                        android:text="@string/null_text"
                        style="@style/tv_null_text"/>
                <TextView
                        android:id="@+id/tvOverQuantityChild"
                        android:visibility="gone"
                        android:text="@string/over_quantity"
                        style="@style/tv_null_text"/>
            </FrameLayout>
            <TextView
                    android:text="@string/date_of_birth"
                    style="@style/tv_login"/>
            <TextView
                    android:id="@+id/tvDateOfBirthChild"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_date_of_birth"

                    style="@style/edt_login"/>
            <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tvNotChooseDateChild"
                        android:visibility="gone"
                        android:text="@string/not_choose_date_of_birth"
                        style="@style/tv_null_text"/>
                <TextView
                        android:id="@+id/tvChooseFutureDateChild"
                        android:visibility="gone"
                        android:text="@string/choose_date_of_birth_at_future"
                        style="@style/tv_null_text"/>
            </FrameLayout>
            <TextView
                    android:text="@string/registerChild_gender"
                    style="@style/tv_login"/>
            <RadioGroup
                    android:id="@+id/rdGenderChild"
                    android:checkedButton="@id/rbMale"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <RadioButton
                        android:id="@+id/rbMale"
                        android:text="@string/registerChild_male"
                        style="@style/btn_register_child"/>
                <RadioButton
                        android:id="@+id/rbFeMale"
                        android:text="@string/registerChild_female"
                        style="@style/btn_register_child"/>
                <RadioButton
                        android:id="@+id/rbDifferent"
                        android:text="@string/registerChild_different"
                        style="@style/btn_register_child"/>
            </RadioGroup>
            <TextView
                    android:text="@string/registerChild_diseases"
                    style="@style/tv_login"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <CheckBox
                            android:checked="true"
                            android:id="@+id/cbADHD"
                            android:text="@string/registerChild_diseases_ADHD"
                            style="@style/btn_checkbox_register_child"/>
                    <CheckBox
                            android:id="@+id/cbLD"
                            android:text="@string/registerChild_diseases_LD"
                            style="@style/btn_checkbox_register_child"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <CheckBox
                            android:id="@+id/cbAutium"
                            android:text="@string/registerChild_diseases_autism"
                            style="@style/btn_checkbox_register_child"/>
                    <CheckBox
                            android:id="@+id/cbMR"
                            android:text="@string/registerChild_diseases_MR"
                            style="@style/btn_checkbox_register_child"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <CheckBox
                            android:id="@+id/cbChromosomal"
                            android:text="@string/registerChild_diseases_Chromosomal_abnormalities"
                            style="@style/btn_checkbox_register_child"/>
                    <CheckBox
                            android:id="@+id/cbDifferent"
                            android:text="@string/registerChild_different"
                            style="@style/btn_checkbox_register_child"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                    android:text="@string/profile"
                    style="@style/tv_login"/>
            <EditText
                    android:id="@+id/edProfileRegisterChild"
                    android:hint="@string/hint_profile"
                    android:inputType="textMultiLine"
                    style="@style/edt_profile_register_user"/>
            <Button android:id="@+id/btnSaveAndContinue"
                    android:text="@string/tv_login"
                    style="@style/btn_save_and_next"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>