<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:background="@drawable/shape_background"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="namhenry.com.vn.projectweek4.activity.RegisterUserActivity">

    <include layout="@layout/action_bar"/>
    <ScrollView
            android:layout_width="match_parent"
            android:background="@drawable/shape_background"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/registerUser_tv_header"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:text="@string/register_User_null_text_header"
                    style="@style/tv_null_text"/>
            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgRegisterUser"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_no_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp">
            </de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                    android:text="@string/user_name_register"
                    style="@style/tv_login"/>
            <EditText
                    android:id="@+id/edUserName"
                    android:inputType="text"
                    android:hint="@string/user_name_register_hint"

                    style="@style/edt_login"/>
            <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tvNullText"
                        android:visibility="gone"
                        android:text="@string/null_text"
                        style="@style/tv_null_text"/>
                <TextView
                        android:id="@+id/tvOverQuantity"
                        android:visibility="gone"
                        android:text="@string/over_quantity"
                        style="@style/tv_null_text"/>
            </FrameLayout>

            <TextView
                    android:text="@string/date_of_birth"
                    style="@style/tv_login"/>
            <TextView
                    android:id="@+id/tvDateOfBirth"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_date_of_birth"
            
                    style="@style/edt_login"/>
            <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tvNotChooseDate"
                        android:visibility="gone"
                        android:text="@string/not_choose_date_of_birth"
                        style="@style/tv_null_text"/>
                <TextView
                        android:id="@+id/tvChooseFutureDate"
                        android:visibility="gone"
                        android:text="@string/choose_date_of_birth_at_future"
                        style="@style/tv_null_text"/>
            </FrameLayout>
            <LinearLayout
                    android:layout_weight="1.5"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                    <TextView android:text="@string/number_child"
                              style="@style/tv_login"/>
                    <Spinner
                            android:id="@+id/spRegisterUser"
                            style="@style/edt_login">
                    </Spinner>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                    <TextView android:text="@string/address"
                              style="@style/tv_login"/>
                    <EditText
                            android:inputType="text"
                            android:hint="@string/address"
                            style="@style/edt_login"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                    android:text="@string/profile"
                    style="@style/tv_login"/>
            <EditText
                    android:id="@+id/edProfileRegisterUser"
                    android:hint="@string/hint_profile"
                    android:inputType="textMultiLine"
                    style="@style/edt_profile_register_user"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

