<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/shape_background"
        tools:context="namhenry.com.vn.projectweek4.activity.LoginActivity">
    <ImageView
            android:layout_marginTop="@dimen/common_50dp"
            android:src="@drawable/first_screen_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_marginTop="@dimen/common_50dp"
            android:text="@string/tv_mail"
            style="@style/tv_login"/>
    <EditText
            android:id="@+id/edt_mail"
            android:hint="@string/tv_mail"
            android:inputType="textEmailAddress"
            style="@style/edt_login"/>
    <TextView
            android:layout_marginTop="@dimen/common_30dp"
            android:text="@string/tv_pass"
            style="@style/tv_login"/>
    <EditText
            android:id="@+id/edt_pass"
            android:hint="@string/tv_pass_hint"
            android:inputType="textPassword"
            style="@style/edt_login"/>
    <Button android:id="@+id/btnlogin"
            android:text="@string/tv_login"
            style="@style/btn_login"/>
    <TextView
            android:layout_marginTop="@dimen/common_30sp"
            android:layout_gravity="center"
            android:textColor="@color/background_register_firstScreen"
            android:text="@string/tv_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>